--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-select": "^5.2.1",
     "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12"
   },
